--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -26,13 +26,13 @@
   "onboardingContinue": "Continue",
   "onboardingChangeLater": "You can change this later in settings.",
   "languageEnglish": "English",
-  "languageGerman": "Deutsch",
+  "languageGerman": "",
   "languageFarsi": "فارسی",
   "languageArabic": "Arabic",
   "languageSpanish": "Spanish",
   "languageFrench": "French",
   "languageTurkish": "Turkish",
-  "learningLanguageGerman": "Deutsch",
+  "learningLanguageGerman": "",
   "settingsSelectLanguageTitle": "Select language",
   "settingsSelectThemeTitle": "Select theme",
   "settingsSignOutSuccess": "Signed out",
