--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -26,13 +26,13 @@
   "onboardingContinue": "ادامه",
   "onboardingChangeLater": "بعداً در تنظیمات می‌توانید تغییر دهید.",
   "languageEnglish": "انگلیسی",
-  "languageGerman": "آلمانی",
+  "languageGerman": "",
   "languageFarsi": "فارسی",
   "languageArabic": "عربی",
   "languageSpanish": "اسپانیایی",
   "languageFrench": "فرانسوی",
   "languageTurkish": "ترکی استانبولی",
-  "learningLanguageGerman": "آلمانی",
+  "learningLanguageGerman": "",
   "settingsSelectLanguageTitle": "انتخاب زبان",
   "settingsSelectThemeTitle": "انتخاب پوسته",
   "settingsSignOutSuccess": "خروج انجام شد",
