--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,68 +1,13 @@
 {
-  "appTitle": "Word Map",
-  "wordMapTitleWithLevel": "{level} Words",
-  "barrierWordDetails": "Word details",
-  "dialogExampleHeading": "Example",
-  "dialogExampleMissing": "No example yet",
-  "dialogExampleTranslationMissing": "No translated example",
   "settingsTitle": "Settings",
   "settingsChangeLanguage": "Change Language",
-  "settingsChangeTheme": "Change Theme",
-  "settingsSignOut": "Sign out / Sign in",
-  "settingsLanguageEnglish": "English",
+  "totalWordsLabel": "Total words",
   "settingsLanguageFarsi": "فارسی",
-  "settingsThemeLight": "Light Mode",
-  "settingsThemeDark": "Dark Mode",
-  "settingsSignOutConfirmTitle": "Sign out?",
-  "settingsSignOutConfirmMessage": "Are you sure you want to sign out?",
-  "settingsCancel": "Cancel",
-  "settingsSignOutAction": "Sign out",
-  "wordLevelsTitle": "Word Levels",
-  "onboardingTitle": "Welcome to Word Map",
-  "onboardingSubtitle": "Set your language to personalize translations.",
-  "onboardingMyLanguage": "My language",
-  "onboardingSelectLanguage": "Select your language",
-  "onboardingILearn": "I learn",
-  "onboardingContinue": "Continue",
-  "onboardingChangeLater": "You can change this later in settings.",
-  "languageEnglish": "English",
-  "languageGerman": "",
-  "languageFarsi": "فارسی",
-  "languageArabic": "Arabic",
-  "languageSpanish": "Spanish",
-  "languageFrench": "French",
-  "languageTurkish": "Turkish",
-  "learningLanguageGerman": "",
+  "loadWordsFailed": "Failed to load words.",
   "settingsSelectLanguageTitle": "Select language",
-  "settingsSelectThemeTitle": "Select theme",
-  "settingsSignOutSuccess": "Signed out",
-  "settingsSignOutFailed": "Sign out failed: {error}",
-  "@settingsSignOutFailed": {
-    "placeholders": {
-      "error": {
-        "type": "String"
-      }
-    }
-  },
-  "authConnectTitle": "Connect your account",
-  "authSignInSubtitle": "Sign in to sync and recover your progress across devices.",
-  "authOptionalNote": "You can keep using Word Map without signing in. Connecting keeps your progress backed up.",
-  "authForgotPassword": "Forgot password?",
-  "authOrSeparator": "OR",
-  "authSignInWithEmail": "Sign in with email",
-  "authSignInWithApple": "Sign in with Apple",
-  "authNoAccountCta": "Don’t have an account? Sign up",
-  "loginSkipTitle": "Get started",
-  "loginSkipSubtitle": "Sign in to sync progress, or continue without an account.",
-  "loginSkipLogin": "Log in / Sign up",
-  "loginSkipContinue": "Continue without account",
-  "loginComingSoonTitle": "Login coming soon",
-  "loginComingSoonSubtitle": "We are building authentication. Continue without an account for now.",
-  "loginComingSoonGoToMap": "Go to Word Map",
-  "wordDetailsHeading": "Word details",
-  "authEmail": "Email",
-  "authPassword": "Password",
-  "authSignIn": "Sign in",
-  "authSignUp": "Sign up",
-  "authSignInWithGoogle": "Sign in with Google"
+  "chapterOverview": "Chapter overview",
+  "chapterEmptyState": "No words in this chapter yet.",
+  "bookmarkedLabel": "Bookmarked",
+  "settingsLanguageEnglish": "English",
+  "viewedLabel": "Viewed"
 }
