--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,13 +1,31 @@
 {
   "settingsTitle": "تنظیمات",
   "settingsChangeLanguage": "تغییر زبان",
+  "tabHome": "خانه",
+  "tabLessons": "درس‌ها",
+  "tabProfile": "حساب کاربری",
   "totalWordsLabel": "Total words",
   "settingsLanguageFarsi": "فارسی",
   "loadWordsFailed": "Failed to load words.",
   "settingsSelectLanguageTitle": "انتخاب زبان",
+  "settingsLanguage": "زبان",
+  "settingsLanguageDescription": "زبان رابط کاربری اپ",
+  "settingsTheme": "پوسته",
+  "settingsThemeDescription": "انتخاب ظاهر اپ",
+  "settingsThemeSystem": "پیش‌فرض سیستم",
+  "settingsThemeLight": "حالت روشن",
+  "settingsThemeDark": "حالت تاریک",
+  "settingsNotificationsTitle": "اعلان‌ها و یادآورها",
+  "settingsNotifications": "اعلان‌های اپ",
+  "settingsNotificationsDescription": "هشدارهای اپ و یادآوری‌های روزانه",
+  "settingsDailyReminder": "یادآور روزانه",
+  "lessonsTitle": "درس‌ها",
   "chapterOverview": "Chapter overview",
   "chapterEmptyState": "No words in this chapter yet.",
   "bookmarkedLabel": "Bookmarked",
   "settingsLanguageEnglish": "انگلیسی",
-  "viewedLabel": "Viewed"
+  "viewedLabel": "Viewed",
+  "lessonCompleted": "Completed",
+  "lessonRepeat": "Repeat",
+  "lessonRepeatAgain": "Repeat again"
 }
