--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -20,6 +20,48 @@
   "settingsNotificationsDescription": "هشدارهای اپ و یادآوری‌های روزانه",
   "settingsDailyReminder": "یادآور روزانه",
   "lessonsTitle": "درس‌ها",
+  "lessonBeginnerAlphabetTitle": "Alphabet",
+  "lessonBeginnerReadingRulesTitle": "Reading rules",
+  "lessonBeginnerPartsOfSpeechTitle": "Parts of speech",
+  "lessonBeginnerHalloTitle": "Hallo",
+  "lessonBeginnerAllAboutGermanTitle": "All about German",
+  "lessonsCategoryBeginnerBasics": "مبانی مقدماتی",
+  "lessonsCategoryGrammar": "دستور زبان",
+  "lessonsCategoryReadingListening": "خواندن و شنیدن",
+  "lessonsCategoryExamPractice": "تمرین آزمون",
+  "grammarLevelA1": "گرامر A1",
+  "grammarLevelA2": "گرامر A2",
+  "grammarLevelB1": "گرامر B1",
+  "grammarLevelB2": "گرامر B2",
+  "grammarLevelC1": "گرامر C1",
+  "grammarLevelLessonsCount": "{count, plural, =0{هنوز درسی نیست} =1{1 درس} other{{count} درس}}",
+  "@grammarLevelLessonsCount": {
+    "placeholders": {
+      "count": {}
+    }
+  },
+  "lessonsStatusComingSoon": "به‌زودی",
+  "lessonButtonNext": "بعدی",
+  "slideAlphabetOverviewTitle": "German Alphabet – Overview",
+  "slideAlphabetVowelsTitle": "Vowels (A, E, I, O, U)",
+  "slideAlphabetUmlautTitle": "Umlaut vowels (Ä, Ö, Ü)",
+  "slideAlphabetEsszettTitle": "ß – Eszett",
+  "slideReadingBasicRuleTitle": "Basic reading rule – “ie” vs “ei”",
+  "slideReadingSchChSpStTitle": "“sch”, “ch” and “sp / st”",
+  "slideReadingCapitalLettersTitle": "Capital letters (Nouns)",
+  "slideReadingLongVsShortTitle": "Long vs short vowels",
+  "slidePartsMainPartsTitle": "Main parts of speech",
+  "slidePartsNounsGenderTitle": "Nouns and gender",
+  "slidePartsVerbsInfinitiveTitle": "Verbs in basic form (Infinitiv)",
+  "slidePartsAdjectivesTitle": "Adjectives – describing words",
+  "slideHalloBasicGreetingsTitle": "Basic greetings",
+  "slideHalloIntroducingTitle": "Introducing yourself",
+  "slideHalloHowAreYouTitle": "Asking “How are you?”",
+  "slideHalloPoliteWordsTitle": "Polite words",
+  "slideGermanWhereSpokenTitle": "Where is German spoken?",
+  "slideGermanFormalInformalTitle": "Formal vs informal “you”",
+  "slideGermanWordOrderTitle": "Word order – basic idea",
+  "slideGermanLongWordsTitle": "Don’t be afraid of long words",
   "chapterOverview": "Chapter overview",
   "chapterEmptyState": "No words in this chapter yet.",
   "bookmarkedLabel": "Bookmarked",
