--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -20,6 +20,48 @@
   "settingsNotificationsDescription": "App alerts and daily check-ins",
   "settingsDailyReminder": "Daily reminder",
   "lessonsTitle": "Lessons",
+  "lessonBeginnerAlphabetTitle": "Alphabet",
+  "lessonBeginnerReadingRulesTitle": "Reading rules",
+  "lessonBeginnerPartsOfSpeechTitle": "Parts of speech",
+  "lessonBeginnerHalloTitle": "Hallo",
+  "lessonBeginnerAllAboutGermanTitle": "All about German",
+  "lessonsCategoryBeginnerBasics": "Beginner Basics",
+  "lessonsCategoryGrammar": "Grammar",
+  "lessonsCategoryReadingListening": "Reading & Listening",
+  "lessonsCategoryExamPractice": "Exam Practice",
+  "grammarLevelA1": "A1 Grammar",
+  "grammarLevelA2": "A2 Grammar",
+  "grammarLevelB1": "B1 Grammar",
+  "grammarLevelB2": "B2 Grammar",
+  "grammarLevelC1": "C1 Grammar",
+  "grammarLevelLessonsCount": "{count, plural, =0{No lessons yet} =1{1 lesson} other{{count} lessons}}",
+  "@grammarLevelLessonsCount": {
+    "placeholders": {
+      "count": {}
+    }
+  },
+  "lessonsStatusComingSoon": "Coming soon",
+  "lessonButtonNext": "Next",
+  "slideAlphabetOverviewTitle": "German Alphabet – Overview",
+  "slideAlphabetVowelsTitle": "Vowels (A, E, I, O, U)",
+  "slideAlphabetUmlautTitle": "Umlaut vowels (Ä, Ö, Ü)",
+  "slideAlphabetEsszettTitle": "ß – Eszett",
+  "slideReadingBasicRuleTitle": "Basic reading rule – “ie” vs “ei”",
+  "slideReadingSchChSpStTitle": "“sch”, “ch” and “sp / st”",
+  "slideReadingCapitalLettersTitle": "Capital letters (Nouns)",
+  "slideReadingLongVsShortTitle": "Long vs short vowels",
+  "slidePartsMainPartsTitle": "Main parts of speech",
+  "slidePartsNounsGenderTitle": "Nouns and gender",
+  "slidePartsVerbsInfinitiveTitle": "Verbs in basic form (Infinitiv)",
+  "slidePartsAdjectivesTitle": "Adjectives – describing words",
+  "slideHalloBasicGreetingsTitle": "Basic greetings",
+  "slideHalloIntroducingTitle": "Introducing yourself",
+  "slideHalloHowAreYouTitle": "Asking “How are you?”",
+  "slideHalloPoliteWordsTitle": "Polite words",
+  "slideGermanWhereSpokenTitle": "Where is German spoken?",
+  "slideGermanFormalInformalTitle": "Formal vs informal “you”",
+  "slideGermanWordOrderTitle": "Word order – basic idea",
+  "slideGermanLongWordsTitle": "Don’t be afraid of long words",
   "chapterOverview": "Chapter {chapter} overview",
   "@chapterOverview": {
     "placeholders": {
