--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -70,7 +70,7 @@
   "bookmarkedLabel": "Bookmarked",
   "settingsLanguageEnglish": "انگلیسی",
   "viewedLabel": "Viewed",
-  "lessonCompleted": "Completed",
+  "lessonCompleted": "یاد گرفتم",
   "lessonRepeat": "Repeat",
   "lessonRepeatAgain": "Repeat again"
 }
