--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,11 +1,18 @@
 {
   "settingsTitle": "Settings",
   "settingsChangeLanguage": "Change Language",
+  "settingsAppLanguageTitle": "App language",
+  "settingsWordLanguagesTitle": "Word language(s)",
+  "settingsSelectWordLanguagesTitle": "Word languages",
+  "settingsSelectWordLanguagesHint": "Choose 1 or 2",
+  "settingsWordLanguagesMaxTwo": "You can select up to 2 languages.",
+  "settingsWordLanguagesMinOne": "Select at least one language.",
   "tabHome": "Home",
   "tabLessons": "Lessons",
   "tabProfile": "Profile",
   "totalWordsLabel": "Total words",
   "settingsLanguageFarsi": "فارسی",
+  "settingsLanguagePashto": "پښتو",
   "loadWordsFailed": "Failed to load words.",
   "settingsSelectLanguageTitle": "Select language",
   "settingsLanguage": "Language",
@@ -78,5 +85,104 @@
   "viewedLabel": "Viewed",
   "lessonCompleted": "Completed",
   "lessonRepeat": "Repeat",
-  "lessonRepeatAgain": "Repeat again"
+  "lessonRepeatAgain": "Repeat again",
+  "chapterCategories": "Categories",
+  "chooseCategory": "Choose a category",
+  "categoryEmptyState": "No words in this category yet.",
+  "categoryOverview": "Category {category} overview",
+  "@categoryOverview": {
+    "placeholders": {
+      "category": {}
+    }
+  },
+  "homeSupportTitle": "☕️ Support WordMap",
+  "homeSupportBody": "German got you like… 🤯?\nTap 💎 to keep the tea brewing ☕️❤️",
+  "homeSupportSupportButton": "Support",
+  "homeSupportCloseTooltip": "Close",
+  "commonClose": "Close",
+  "commonLesson": "Lesson",
+  "lessonLoadFailed": "Failed to load lesson.",
+  "audioPlaybackFailed": "Audio couldn’t be played.",
+  "adLoading": "Ad is loading…",
+  "noMoreWordsTitle": "No more words",
+  "noMoreWordsBody": "You reached 0. Watch an ad to activate 💎 mode for 1 hour (unlimited words), or wait 1 hour to get 50 words back.",
+  "noMoreWordsWaitOneHour": "Wait 1 hour",
+  "noMoreWordsWatchAd": "Watch ad",
+  "diamondBadgeSubtitleActive": "Diamond",
+  "diamondBadgeSubtitleInactive": "Left",
+  "diamondBadgeSubtitleCooldown": "Cooldown",
+  "cooldownActive": "Try again in {time}",
+  "@cooldownActive": {
+    "placeholders": {
+      "time": {}
+    }
+  },
+  "updateAvailableTitle": "New version available",
+  "updateAvailableBody": "Please update WordMap to get the latest features.",
+  "updateAvailableLater": "Later",
+  "updateAvailableUpdate": "Update",
+  "authError": "Authentication error: {error}",
+  "@authError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "tagA1Core": "A1 core",
+  "tagDailyLife": "Daily life",
+  "tagConversationPhrases": "Conversation phrases",
+  "tagGreetingsPoliteness": "Greetings & politeness",
+  "tagQuestionsAnswers": "Questions & answers",
+  "tagTimeDate": "Time & date",
+  "tagNumbersMath": "Numbers & math",
+  "tagColorsShapes": "Colors & shapes",
+  "tagDaysMonthsSeasons": "Days, months & seasons",
+  "tagWeather": "Weather",
+  "tagDirectionsNavigation": "Directions & navigation",
+  "tagPlacesBuildings": "Places & buildings",
+  "tagCityTransport": "City & transport",
+  "tagTravelHolidays": "Travel & holidays",
+  "tagHomeHousehold": "Home & household",
+  "tagFurnitureRooms": "Furniture & rooms",
+  "tagKitchenCooking": "Kitchen & cooking",
+  "tagFoodDrink": "Food & drink",
+  "tagShoppingMoney": "Shopping & money",
+  "tagClothingFashion": "Clothing & fashion",
+  "tagHealthBody": "Health & body",
+  "tagFeelingsEmotions": "Feelings & emotions",
+  "tagPeopleFamily": "People & family",
+  "tagRelationships": "Relationships",
+  "tagSchoolLearning": "School & learning",
+  "tagWorkOffice": "Work & office",
+  "tagJobsProfessions": "Jobs & professions",
+  "tagTechnologyInternet": "Technology & internet",
+  "tagMediaSocial": "Media & social",
+  "tagHobbiesSports": "Hobbies & sports",
+  "tagNatureAnimals": "Nature & animals",
+  "tagPlantsEnvironment": "Plants & environment",
+  "tagCultureEvents": "Culture & events",
+  "tagServicesAuthorities": "Services & authorities",
+  "tagReligionCulture": "Religion & culture",
+  "tagSafetyEmergency": "Safety & emergency",
+  "tagLawRules": "Law & rules",
+  "tagVerb": "Verb",
+  "tagNoun": "Noun",
+  "tagAdjective": "Adjective",
+  "tagAdverb": "Adverb",
+  "tagPronoun": "Pronoun",
+  "tagArticle": "Article",
+  "tagPreposition": "Preposition",
+  "tagConjunction": "Conjunction",
+  "tagModalVerb": "Modal verb",
+  "tagSeparableVerb": "Separable verb",
+  "tagReflexiveVerb": "Reflexive verb",
+  "tagIrregularVerb": "Irregular verb",
+  "tagQuestionWord": "Question word",
+  "tagNegation": "Negation",
+  "tagNumbers": "Numbers",
+  "tagTimeExpression": "Time expression",
+  "tagPlaceExpression": "Place expression",
+  "tagProperNoun": "Proper noun",
+  "tagLoanwordInternational": "Loanword (international)",
+  "tagAbbreviation": "Abbreviation",
+  "tagUncategorized": "Uncategorized"
 }
