--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,30 +1,37 @@
 {
   "settingsTitle": "تنظیمات",
   "settingsChangeLanguage": "تغییر زبان",
+  "settingsAppLanguageTitle": "زبان برنامه",
+  "settingsWordLanguagesTitle": "زبان ترجمهٔ کلمات",
+  "settingsSelectWordLanguagesTitle": "زبان‌های کلمات",
+  "settingsSelectWordLanguagesHint": "۱ یا ۲ زبان را انتخاب کنید",
+  "settingsWordLanguagesMaxTwo": "حداکثر ۲ زبان می‌توانید انتخاب کنید.",
+  "settingsWordLanguagesMinOne": "حداقل یک زبان را انتخاب کنید.",
   "tabHome": "خانه",
   "tabLessons": "درس‌ها",
   "tabProfile": "حساب کاربری",
-  "totalWordsLabel": "Total words",
+  "totalWordsLabel": "مجموع کلمات",
   "settingsLanguageFarsi": "فارسی",
-  "loadWordsFailed": "Failed to load words.",
+  "settingsLanguagePashto": "پښتو",
+  "loadWordsFailed": "بارگذاری کلمات ناموفق بود.",
   "settingsSelectLanguageTitle": "انتخاب زبان",
   "settingsLanguage": "زبان",
-  "settingsLanguageDescription": "زبان رابط کاربری اپ",
-  "settingsTheme": "پوسته",
-  "settingsThemeDescription": "انتخاب ظاهر اپ",
-  "settingsThemeSystem": "پیش‌فرض سیستم",
+  "settingsLanguageDescription": "زبان برنامه",
+  "settingsTheme": "تم",
+  "settingsThemeDescription": "ظاهر برنامه را انتخاب کنید",
+  "settingsThemeSystem": "مطابق سیستم",
   "settingsThemeLight": "حالت روشن",
   "settingsThemeDark": "حالت تاریک",
-  "settingsNotificationsTitle": "اعلان‌ها و یادآورها",
-  "settingsNotifications": "اعلان‌های اپ",
-  "settingsNotificationsDescription": "هشدارهای اپ و یادآوری‌های روزانه",
-  "settingsDailyReminder": "یادآور روزانه",
+  "settingsNotificationsTitle": "اعلان‌ها و یادآوری‌ها",
+  "settingsNotifications": "اعلان‌های برنامه",
+  "settingsNotificationsDescription": "اعلان‌های برنامه و یادآوری روزانه",
+  "settingsDailyReminder": "یادآوری روزانه",
   "lessonsTitle": "درس‌ها",
-  "lessonBeginnerAlphabetTitle": "Alphabet",
-  "lessonBeginnerReadingRulesTitle": "Reading rules",
-  "lessonBeginnerPartsOfSpeechTitle": "Parts of speech",
-  "lessonBeginnerHalloTitle": "Hallo",
-  "lessonBeginnerAllAboutGermanTitle": "All about German",
+  "lessonBeginnerAlphabetTitle": "الفبا",
+  "lessonBeginnerReadingRulesTitle": "قواعد خواندن",
+  "lessonBeginnerPartsOfSpeechTitle": "اقسام کلمه",
+  "lessonBeginnerHalloTitle": "سلام",
+  "lessonBeginnerAllAboutGermanTitle": "همه‌چیز دربارهٔ آلمانی",
   "lessonsCategoryBeginnerBasics": "مبانی مقدماتی",
   "lessonsCategoryGrammar": "دستور زبان",
   "lessonsCategoryReadingListening": "خواندن و شنیدن",
@@ -45,32 +52,132 @@
   "lessonExamplesTitle": "نمونه‌ها",
   "grammarTopicComingSoon": "محتوا به‌زودی اضافه می‌شود.",
   "lessonButtonNext": "بعدی",
-  "slideAlphabetOverviewTitle": "German Alphabet – Overview",
-  "slideAlphabetVowelsTitle": "Vowels (A, E, I, O, U)",
-  "slideAlphabetUmlautTitle": "Umlaut vowels (Ä, Ö, Ü)",
+  "slideAlphabetOverviewTitle": "الفبای آلمانی – معرفی",
+  "slideAlphabetVowelsTitle": "صدادارها (A, E, I, O, U)",
+  "slideAlphabetUmlautTitle": "اُملاؤت‌ها (Ä, Ö, Ü)",
   "slideAlphabetEsszettTitle": "ß – Eszett",
-  "slideReadingBasicRuleTitle": "Basic reading rule – “ie” vs “ei”",
+  "slideReadingBasicRuleTitle": "قاعدهٔ سادهٔ خواندن – «ie» در برابر «ei»",
   "slideReadingSchChSpStTitle": "“sch”, “ch” and “sp / st”",
-  "slideReadingCapitalLettersTitle": "Capital letters (Nouns)",
-  "slideReadingLongVsShortTitle": "Long vs short vowels",
-  "slidePartsMainPartsTitle": "Main parts of speech",
-  "slidePartsNounsGenderTitle": "Nouns and gender",
-  "slidePartsVerbsInfinitiveTitle": "Verbs in basic form (Infinitiv)",
-  "slidePartsAdjectivesTitle": "Adjectives – describing words",
-  "slideHalloBasicGreetingsTitle": "Basic greetings",
-  "slideHalloIntroducingTitle": "Introducing yourself",
-  "slideHalloHowAreYouTitle": "Asking “How are you?”",
-  "slideHalloPoliteWordsTitle": "Polite words",
-  "slideGermanWhereSpokenTitle": "Where is German spoken?",
-  "slideGermanFormalInformalTitle": "Formal vs informal “you”",
-  "slideGermanWordOrderTitle": "Word order – basic idea",
-  "slideGermanLongWordsTitle": "Don’t be afraid of long words",
-  "chapterOverview": "Chapter overview",
-  "chapterEmptyState": "No words in this chapter yet.",
-  "bookmarkedLabel": "Bookmarked",
-  "settingsLanguageEnglish": "انگلیسی",
-  "viewedLabel": "Viewed",
+  "slideReadingCapitalLettersTitle": "حروف بزرگ (اسم‌ها)",
+  "slideReadingLongVsShortTitle": "صدادار بلند و کوتاه",
+  "slidePartsMainPartsTitle": "اقسام اصلی کلمه",
+  "slidePartsNounsGenderTitle": "اسم‌ها و جنسیت",
+  "slidePartsVerbsInfinitiveTitle": "فعل در شکل پایه (Infinitiv)",
+  "slidePartsAdjectivesTitle": "صفت‌ها – کلمات توصیفی",
+  "slideHalloBasicGreetingsTitle": "سلام‌های ساده",
+  "slideHalloIntroducingTitle": "معرفی خود",
+  "slideHalloHowAreYouTitle": "پرسیدن «حال‌تان چطور است؟»",
+  "slideHalloPoliteWordsTitle": "کلمات مؤدبانه",
+  "slideGermanWhereSpokenTitle": "آلمانی کجا صحبت می‌شود؟",
+  "slideGermanFormalInformalTitle": "رسمی و غیررسمی در «تو/شما»",
+  "slideGermanWordOrderTitle": "ترتیب کلمات – ایدهٔ کلی",
+  "slideGermanLongWordsTitle": "از کلمات طولانی نترس",
+  "chapterOverview": "نمای کلی فصل {chapter}",
+  "chooseChapter": "فصل خود را انتخاب کنید",
+  "chapterEmptyState": "در این فصل هنوز کلمه‌ای نیست.",
+  "bookmarkedLabel": "نشان‌دار",
+  "settingsLanguageEnglish": "English",
+  "viewedLabel": "دیده‌شده",
   "lessonCompleted": "یاد گرفتم",
-  "lessonRepeat": "Repeat",
-  "lessonRepeatAgain": "Repeat again"
+  "lessonRepeat": "تکرار",
+  "lessonRepeatAgain": "دوباره تکرار کن",
+  "chapterCategories": "دسته‌بندی‌ها",
+  "chooseCategory": "یک دسته‌بندی را انتخاب کنید",
+  "categoryEmptyState": "در این دسته‌بندی هنوز کلمه‌ای نیست.",
+  "categoryOverview": "نمای کلی دسته‌بندی {category}",
+  "@categoryOverview": {
+    "placeholders": {
+      "category": {}
+    }
+  },
+  "homeSupportTitle": "☕️ حمایت از WordMap",
+  "homeSupportBody": "اگر WordMap کمکت می‌کند… ☺️\nبا 💎 حمایت کن تا چای ما همیشه دم باشد ☕️❤️",
+  "homeSupportSupportButton": "حمایت",
+  "homeSupportCloseTooltip": "بستن",
+  "commonClose": "بستن",
+  "commonLesson": "درس",
+  "lessonLoadFailed": "بارگذاری درس ناموفق بود.",
+  "audioPlaybackFailed": "پخش صدا ممکن نشد.",
+  "adLoading": "تبلیغ در حال بارگذاری است…",
+  "noMoreWordsTitle": "دیگر کلمه‌ای نمانده",
+  "noMoreWordsBody": "به ۰ رسیدی. یک تبلیغ ببین تا حالت 💎 برای ۱ ساعت فعال شود (کلمه نامحدود)، یا ۱ ساعت صبر کن تا ۵۰ کلمه دوباره برگردد.",
+  "noMoreWordsWaitOneHour": "۱ ساعت صبر کن",
+  "noMoreWordsWatchAd": "دیدن تبلیغ",
+  "diamondBadgeSubtitleActive": "الماس",
+  "diamondBadgeSubtitleInactive": "مانده",
+  "diamondBadgeSubtitleCooldown": "وقفه",
+  "cooldownActive": "بعد از {time} دوباره امتحان کن",
+  "@cooldownActive": {
+    "placeholders": {
+      "time": {}
+    }
+  },
+  "updateAvailableTitle": "نسخهٔ جدید موجود است",
+  "updateAvailableBody": "برای دریافت امکانات جدید، لطفاً WordMap را به‌روز کنید.",
+  "updateAvailableLater": "بعداً",
+  "updateAvailableUpdate": "به‌روزرسانی",
+  "authError": "خطای ورود: {error}",
+  "@authError": {
+    "placeholders": {
+      "error": {}
+    }
+  },
+  "tagA1Core": "کلمات اصلی A1",
+  "tagDailyLife": "زندگی روزمره",
+  "tagConversationPhrases": "عبارت‌های گفت‌وگو",
+  "tagGreetingsPoliteness": "سلام و ادب",
+  "tagQuestionsAnswers": "پرسش و پاسخ",
+  "tagTimeDate": "وقت و تاریخ",
+  "tagNumbersMath": "اعداد و حساب",
+  "tagColorsShapes": "رنگ‌ها و شکل‌ها",
+  "tagDaysMonthsSeasons": "روزها، ماه‌ها و فصل‌ها",
+  "tagWeather": "آب‌وهوا",
+  "tagDirectionsNavigation": "مسیر و جهت‌یابی",
+  "tagPlacesBuildings": "مکان‌ها و ساختمان‌ها",
+  "tagCityTransport": "شهر و ترانسپورت",
+  "tagTravelHolidays": "سفر و رخصتی",
+  "tagHomeHousehold": "خانه و کارهای خانه",
+  "tagFurnitureRooms": "مبلمان و اتاق‌ها",
+  "tagKitchenCooking": "آشپزخانه و پخت‌وپز",
+  "tagFoodDrink": "خوراک و نوشیدنی",
+  "tagShoppingMoney": "خرید و پول",
+  "tagClothingFashion": "لباس و پوشاک",
+  "tagHealthBody": "سلامتی و بدن",
+  "tagFeelingsEmotions": "احساسات",
+  "tagPeopleFamily": "مردم و خانواده",
+  "tagRelationships": "روابط",
+  "tagSchoolLearning": "مکتب و یادگیری",
+  "tagWorkOffice": "کار و دفتر",
+  "tagJobsProfessions": "شغل‌ها",
+  "tagTechnologyInternet": "تکنالوژی و اینترنت",
+  "tagMediaSocial": "رسانه و شبکه‌های اجتماعی",
+  "tagHobbiesSports": "سرگرمی و ورزش",
+  "tagNatureAnimals": "طبیعت و حیوانات",
+  "tagPlantsEnvironment": "گیاهان و محیط‌زیست",
+  "tagCultureEvents": "فرهنگ و رویدادها",
+  "tagServicesAuthorities": "خدمات و ادارات",
+  "tagReligionCulture": "دین و فرهنگ",
+  "tagSafetyEmergency": "ایمنی و حالات اضطراری",
+  "tagLawRules": "قانون و مقررات",
+  "tagVerb": "فعل",
+  "tagNoun": "اسم",
+  "tagAdjective": "صفت",
+  "tagAdverb": "قید",
+  "tagPronoun": "ضمیر",
+  "tagArticle": "حرف تعریف",
+  "tagPreposition": "حرف اضافه",
+  "tagConjunction": "حرف ربط",
+  "tagModalVerb": "فعل کمکی",
+  "tagSeparableVerb": "فعل جداشدنی",
+  "tagReflexiveVerb": "فعل انعکاسی",
+  "tagIrregularVerb": "فعل بی‌قاعده",
+  "tagQuestionWord": "کلمهٔ پرسشی",
+  "tagNegation": "نفی",
+  "tagNumbers": "اعداد",
+  "tagTimeExpression": "عبارت زمانی",
+  "tagPlaceExpression": "عبارت مکانی",
+  "tagProperNoun": "اسم خاص",
+  "tagLoanwordInternational": "کلمهٔ قرضی (بین‌المللی)",
+  "tagAbbreviation": "اختصار",
+  "tagUncategorized": "بدون دسته‌بندی"
 }
